[package]
name = "lunatic-persistence"
version = "0.1.0"
authors = ["Branden Vennes b.n.vennes@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
